--- a/index.html
+++ b/index.html
@@ -960,7 +960,155 @@
     </div>
   </div>
   <!-- ------------------------------------POPULAR COURSES SECTION END---------------------- -->
+ <!-------------------------------------REGISTER START------------------------------------------->
+ <section class="register-center mt-5">
+    <div class="container">
+      <!-- primary row -->
+      <div class="row justify-content-between gx-5">
+        <!-- first column -->
+        <div class="col-md-7 m5">
+          <!-- 1 rwo start -->
+          <div class="row mt-5">
+            <div class="col-md-12">
+              <div class="text-white Register-taitle">
+                <h1>Register Now</h1>
+              </div>
+            </div>
+          </div>
+          <!-- 1 row end -->
+          <!-- 2 row start -->
+          <div class="rwo mt-2">
+            <div class="col-md-12">
+              <div class="text-white">
+                <p>
+                  There is a moment in the life of any aspiring astronomer
+                  that it is time to buy that first telescope. It’s exciting
+                  to think about setting up your own viewing station.
+                </p>
+              </div>
+            </div>
+          </div>
 
+          <!-- 2 row end -->
+          <!-- 3 rwo start -->
+
+          <div class="row mt-5 d-flex justify-content-center">
+            <!-- 3 row 1 column -->
+
+            <div class="col-md-3 mt-5 ">
+              <div
+                class="text-white text-center border border-secondary rounded box"
+              >
+                <h1>150</h1>
+                <span class="textsmall"> Days</span>
+              </div>
+            </div>
+
+            <!-- 3 row 2 column -->
+
+            <div class="col-md-3 mt-5">
+              <div
+                class="text-white text-center border border-secondary rounded box"
+              >
+                <h1>23</h1>
+                <span class="textsmall"> Hours</span>
+              </div>
+            </div>
+
+            <!-- 3 row 3 column -->
+
+            <div class="col-md-3 mt-5">
+              <div
+                class="text-white text-center border border-secondary rounded box"
+              >
+                <h1>47</h1>
+                <span class="textsmall">Mins</span>
+              </div>
+            </div>
+
+            <!-- 3 row 4 column -->
+
+            <div class="col-md-3 mt-5">
+              <div
+                class="text-white text-center border border-secondary rounded box"
+              >
+                <h1>59</h1>
+                <span class="textsmall"> Secs</span>
+              </div>
+            </div>
+          </div>
+          <!-- 3 row end -->
+        </div>
+        <!-- second column -->
+        <div class="col-md-5">
+          <div class="card bg-white">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="text-center pt-4">
+                  <h3 class="title1">Courses for Free</h3>
+                  <p class="text-secondary subtaitle">
+                    It is high time for learning
+                  </p>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-12 px-5">
+                  <div class="justify-content-center text text-center">
+                    <form action="">
+                      <div class="">
+                        <input
+                          type="text"
+                          placeholder="Your Name"
+                          required
+                          class="form-control form-lable"
+                        />
+                      </div>
+                      <div class="">
+                        <input
+                          type="tel"
+                          placeholder="Your Phone Number"
+                          required
+                          class="form-control form-lable"
+                        />
+                      </div>
+                      <div class="">
+                        <input
+                          type="email"
+                          placeholder="Your Email Adress"
+                          required
+                          class="form-control form-lable"
+                        />
+                      </div>
+
+                      <div class="mt-4 mb-4 d-grid">
+                        <button
+                          type="submit"
+                          class="btn btn-warning"
+                          style="
+                            --bs-btn-font-size: 13px;
+                            --bs-btn-font-weight: 700;
+                            --bs-btn-padding-y: 10px;
+                            --bs-btn-color: #022a54;
+                            --bs-btn-hover-color: orange;
+                            --bs-btn-hover-bg: #022a54;
+                          "
+                        >
+                          SUBMIT
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- second column end -->
+      </div>
+    </div>
+  </section>
+  <!-------------------------------------REGISTER END------------------------------------------->
 
 
 
