--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,159 @@
     </div>
   </section>
   <!-------------------------------------REGISTER END------------------------------------------->
+ <!-----------------------------------------OUR EXPERT TRAINERS START------------------------------ -->
+ <section class="trainers-center mt-5">
+    <div class="container">
+      <!-- first row start -->
+      <div class="row">
+        <div class="col-md">
+          <div class="text-center title1">
+            <h1>Our Expert Trainers</h1>
+          </div>
+        </div>
+      </div>
+      <!-- first row end -->
+      <!-- second row start -->
 
+      <div class="row">
+        <div class="col-md">
+          <div class="text-center text-secondary">
+            <p class="disiplay-5">
+              <em>
+                Replenish man have thing gathering lights yielding shall you
+              </em>
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- second row end -->
+      <!-- third rwe start -->
+      <div class="row mt-5">
+        <!-- 1 columns start -->
+        <div class="col-md-3 mt-5">
+          <div class="card card1">
+            <img src="./img/t1.jpg" class="card-img-top img-fluid" alt="" />
+
+            <div class="card-body">
+              <h5 class="card-taitle text-center">Mated Nithan</h5>
+              <p class="text-center">
+                <small class="text-secondary">Sr. web designer</small>
+              </p>
+              <p class="card-text text-secondary mt-4">
+                If you are looking at blank cassettes on the web, you may be
+                very confused at the
+              </p>
+
+              <div
+                class="align-item-center justify-content-evenly px- d-flex"
+              >
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 1 columns end -->
+        <!-- 2 columns start -->
+        <div class="col-md-3 mt-5">
+          <div class="card card1">
+            <img src="./img/t2.jpg" class="card-img-top img-fluid" alt="" />
+
+            <div class="card-body">
+              <h5 class="card-taitle text-center">David Cameron</h5>
+              <p class="text-center">
+                <small class="text-secondary">Sr. web designer</small>
+              </p>
+
+              <p class="card-text text-secondary mt-4">
+                If you are looking at blank cassettes on the web, you may be
+                very confused at the
+              </p>
+
+              <div
+                class="align-item-center justify-content-evenly px- d-flex"
+              >
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 2 columns end -->
+        <!-- 3 columns start -->
+
+        <div class="col-md-3 mt-5">
+          <div class="card card1">
+            <img lass="card-img-top img-fluid" src="./img/t3.jpg" alt="" />
+
+            <div class="card-body">
+              <h5 class="card-taitle text-center">Jain Redmel</h5>
+              <p class="text-center">
+                <small class="text-secondary">Sr. web designer</small>
+              </p>
+
+              <p class="card-text text-secondary mt-4">
+                If you are looking at blank cassettes on the web, you may be
+                very confused at the
+              </p>
+
+              <div
+                class="align-item-center justify-content-evenly px- d-flex"
+              >
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 3 columns end -->
+        <!-- 4 columns start  -->
+
+        <div class="col-md-3 mt-5">
+          <div class="card card1">
+            <img
+              src="./img/t1(1).jpg"
+              class="card-img-top img-fluid"
+              alt=""
+            />
+
+            <div class="card-body">
+              <h5 class="card-taitle text-center">Nathan Macken</h5>
+              <p class="text-center">
+                <small class="text-secondary">Sr. web designer</small>
+              </p>
+
+              <p class="card-text text-secondary mt-4">
+                If you are looking at blank cassettes on the web, you may be
+                very confused at the
+              </p>
+
+              <div class="align-item-center justify-content-evenly d-flex">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 4 columns end -->
+      </div>
+
+      <!-- third row end  -->
+    </div>
+  </section>
+  <!-----------------------------------------OUR EXPERT TRAINERS END------------------------------ -->
 
 
 
