--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,139 @@
     </div>
   </section>
   <!-----------------------------------------OUR EXPERT TRAINERS END------------------------------ -->
+<!----------------------------------------------UPCOMING EVENTS START-------------------------------  -->
+<section class="events-center">
+    <div class="container">
+      <!-- first row start -->
+      <div class="row">
+        <div class="col-md">
+          <div class="text-center text-white events-taitle">
+            <h1>Upcoming Events</h1>
+          </div>
+        </div>
+      </div>
+      <!-- first row end -->
+      <!-- second row start -->
 
+      <div class="row">
+        <div class="col-md">
+          <div class="text-center text-secondary">
+            <p class="disiplay-5">
+              <em>
+                Replenish man have thing gathering lights yielding shall you
+              </em>
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- second row end -->
+      <!-- third rwe start -->
+      <!-- 1 event start -->
+      <div class="row mt-5">
+        <div class="col-md-6 mb-2">
+          <div class="event-col">
+            <div class="card event-card">
+              <div class="card-img-overlay">
+                <div class="event-item">
+                  <div class="event-date d-flex">
+                    <h3><span class="text-warning day d-blok">15</span></h3>
+                    <p class="text-white month">Jun</p>
+                  </div>
+                  <div class="event-location">
+                    <p class="text-white small">
+                      <i class="fa-regular fa-clock text-white px-2"></i>
+                      12:00 AM - 12:30 AM
+                    </p>
+                    <p class="text-white small location">
+                      <i class="fa-solid fa-location-dot px-2"></i>Hilton
+                      Quebec
+                    </p>
+                  </div>
+
+                  <div class="event-text p-4">
+                    <p class="text-white text-center">
+                      One make creepeth man for so bearing their firmament
+                      won't fowl meat over seas great
+                    </p>
+                  </div>
+                  <div class="text-center">
+                    <a href="#" class="btn btn-warning event-btn small"
+                      >VIEW DETAILS</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <img
+                class="card-img-buttom rounded"
+                src="./img/e1.jpg "
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+        <!-- 1 event end -->
+        <!-- 2 event start -->
+        <div class="col-md-6 mb-2">
+          <div class="event-col">
+            <div class="card event-card">
+              <div class="card-img-overlay">
+                <div class="event-item">
+                  <div class="event-date d-flex">
+                    <h3><span class="text-warning day d-blok">15</span></h3>
+                    <p class="text-white month">Jun</p>
+                  </div>
+                  <div class="event-location">
+                    <p class="text-white small">
+                      <i class="fa-regular fa-clock text-white px-2"></i>
+                      12:00 AM - 12:30 AM
+                    </p>
+                    <p class="text-white small location">
+                      <i class="fa-solid fa-location-dot px-2"></i>Hilton
+                      Quebec
+                    </p>
+                  </div>
+                  <div class="event-text p-4">
+                    <p class="text-white text-center">
+                      One make creepeth man for so bearing their firmament
+                      won't fowl meat over seas great
+                    </p>
+                  </div>
+                  <div class="text-center">
+                    <a href="#" class="btn btn-warning event-btn"
+                      >VIEW DETAILS</a
+                    >
+                  </div>
+                </div>
+              </div>
+
+              <img
+                class="card-img-buttom rounded"
+                src="./img/e2.jpg"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+
+        <!-- 2 event end -->
+      </div>
+      <!-- event center btn start -->
+
+      <div class="row">
+        <div class="col-md-12">
+          <div
+            class="event-center-btn text text-center mt-5 p-5 align-item-center"
+          >
+            <a href="#" class="text-warning small btn"
+              >VIEW ALL EVENT <img src="./img/next.png" alt=""
+            /></a>
+          </div>
+        </div>
+      </div>
+      <!-- event center btn end -->
+    </div>
+  </section>
+  <!----------------------------------------------UPCOMING EVENTS END-------------------------------  -->
 
 
 
