--- a/index.html
+++ b/index.html
@@ -1395,6 +1395,170 @@
     </div>
   </section>
   <!----------------------------------------------UPCOMING EVENTS END-------------------------------  -->
+   <!-- ------------------------------------- ABOUT SECTION------------------------------------  -->
+   <div class="container mt-5">
+    <!-- primary row -->
+    <div class="row">
+      <div class="col-md-12 text-center mt-5 p-5">
+        <h1>Client say about me</h1>
+        <p>
+          <em>
+            Replenish man have thing gathering lights yielding shall you</em
+          >
+        </p>
+      </div>
+      <!-- carousel -->
+      <div
+        id="slides-with-indicators"
+        class="carousel carousel-dark slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            class="active"
+            type="button"
+            data-bs-target="#slides-with-indicators"
+            data-bs-slide-to="0"
+            style="
+              width: 25px;
+              height: 5px;
+              border-radius: 50%;
+              background: orange;
+            "
+          ></button>
+          <button
+            class="active"
+            type="button"
+            data-bs-target="#slides-with-indicators"
+            data-bs-slide-to="1"
+            style="
+              width: 25px;
+              height: 5px;
+              border-radius: 50%;
+              background: orange;
+            "
+          ></button>
+        </div>
+
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div
+              class="card-wrapper container-sm d-flex justify-content-around"
+            >
+              <!-- active row  -->
+              <div class="row mb-5">
+                <!-- 1 column start -->
+                <div class="col-md-6 p-3">
+                  <div
+                    class="card d-block"
+                    style="box-shadow: 0px 0px 10px 10px rgb(226, 226, 226)"
+                  >
+                    <div class="row">
+                      <div class="col-md-6">
+                        <img class="p-4" src="./img/t2 (2).jpg" alt="" />
+                      </div>
+                      <div class="col-md-6 p-3">
+                        <h5>Davil Saden</h5>
+                        <p>
+                          Him, made can't called over won't there on divide
+                          there male fish beasta own his day third seed sixth
+                          seas. unto. Saw from
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- 1 column end -->
+                <!-- 2 column start -->
+
+                <div class="col-md-6 p-3">
+                  <div
+                    class="card"
+                    style="box-shadow: 0px 0px 10px 10px rgb(226, 226, 226)"
+                  >
+                    <div class="row">
+                      <div class="col-6">
+                        <img class="p-4" src="./img/t4.jpg" alt="" />
+                      </div>
+                      <div class="col-md-6 p-3">
+                        <h5>Elite Martin</h5>
+                        <p>
+                          Him, made can't called over won't there on divide
+                          there male fish beasta own his day third seed sixth
+                          seas. unto. Saw from
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- 2 column start -->
+              </div>
+            </div>
+          </div>
+          <!-- active row end -->
+          <div class="carousel-item">
+            <div
+              class="card-wrapper container-sm d-flex justify-content-around d-none-md"
+            >
+              <!-- 2 row  -->
+              <div class="row mb-5">
+                <!-- 1 column start -->
+                <div class="col-md-6 p-3">
+                  <div
+                    class="card d-block"
+                    style="box-shadow: 0px 0px 10px 10px rgb(226, 226, 226)"
+                  >
+                    <div class="row">
+                      <div class="col-lg-4 col-md-6">
+                        <img class="p-4" src="./img/t4.jpg" alt="" />
+                      </div>
+                      <div class="col-lg-8 col-md-6 p-3">
+                        <h5>Elite Martin</h5>
+                        <p>
+                          Him, made can't called over won't there on divide
+                          there male fish beasta own his day third seed sixth
+                          seas. unto. Saw from
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- 1 column end -->
+                <!-- 2 column start -->
+
+                <div class="col-md-6 p-3">
+                  <div
+                    class="card d-block"
+                    style="box-shadow: 0px 0px 10px 10px rgb(226, 226, 226)"
+                  >
+                    <div class="row">
+                      <div class="col-md-6">
+                        <img class="p-4" src="./img/t2 (2).jpg" alt="" />
+                      </div>
+                      <div class="col-md-6 p-3">
+                        <h5>Davil Saden</h5>
+                        <p>
+                          Him, made can't called over won't there on divide
+                          there male fish beasta own his day third seed sixth
+                          seas. unto. Saw from
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- 2 column end -->
+              </div>
+              <!-- 2 row end -->
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- carousel end -->
+    </div>
+    <!-- primary row end -->
+  </div>
+
+  <!-- ------------------------------------- ABOUT SECTION END------------------------------------  -->
 
 
 
