--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               href="#"
               data-bs-toggle="tooltip"
               title="go to home"
-              class="nav-link"
+              class="nav-link text-warning"
               >Home</a
             >
           </li>
@@ -1559,7 +1559,270 @@
   </div>
 
   <!-- ------------------------------------- ABOUT SECTION END------------------------------------  -->
+<!-- -------------------------------------------------footer start------------------------------------ -->
 
+<footer class="col-nav-blue text-white pt-5 pb-5 mt-5">
+    <div class="container">
+      <div class="row justify-content-center">
+        <!-- 1column start -->
+        <div class="col-md-2 mx-auto mt-3">
+          <ul class="list-unstyled">
+            <h5 class="mb-4 text-center">Top Products</h5>
+
+            <li class="text-center mt-3 li-hover-footer">
+              <a
+                href="#"
+                class="text-secondary foo-a"
+                style="text-decoration: none"
+              >
+                Managed Website</a
+              >
+            </li>
+            <li class="text-center mt-3 li-hover-footer">
+              <a
+                href="#"
+                class="text-secondary li-hover-footer"
+                style="text-decoration: none"
+              >
+                Managed Reputation</a
+              >
+            </li>
+            <li class="text-center mt-3">
+              <a
+                href="#"
+                class="text-secondary"
+                style="text-decoration: none"
+              >
+                Powe Tools</a
+              >
+            </li>
+            <li class="text-center mt-3">
+              <a
+                href="#"
+                class="text-secondary"
+                style="text-decoration: none"
+              >
+                Marketing Service</a
+              >
+            </li>
+          </ul>
+        </div>
+        <!-- 1 column end -->
+        <!-- 2 column start -->
+
+        <div class="col-md-2 mx-auto mt-3">
+          <ul class="list-unstyled">
+            <h5 class="mb-4 text-center">Quick Links</h5>
+
+            <li class="text-center mt-3">
+              <a
+                href="#"
+                class="text-secondary"
+                style="text-decoration: none"
+              >
+                Jobs</a
+              >
+            </li>
+            <li class="text-center mt-3">
+              <a
+                href="#"
+                class="text-secondary"
+                style="text-decoration: none"
+              >
+                Brand Assets</a
+              >
+            </li>
+            <li class="text-center mt-3">
+              <a
+                href="#"
+                class="text-secondary"
+                style="text-decoration: none"
+              >
+                Investor Relations</a
+              >
+            </li>
+            <li class="text-center mt-3">
+              <a
+                href="#"
+                class="text-secondary"
+                style="text-decoration: none"
+              >
+                Terms of Service</a
+              >
+            </li>
+          </ul>
+        </div>
+        <!-- 2 column end -->
+        <!-- 3 column start -->
+
+        <div class="col-md-2 mx-auto mt-3">
+          <ul class="list-unstyled">
+            <h5 class="mb-4 text-center">Features</h5>
+
+            <li class="text-center mt-3">
+              <a
+                href="#"
+                class="text-secondary"
+                style="text-decoration: none"
+              >
+                Jobs</a
+              >
+            </li>
+            <li class="text-center mt-3">
+              <a
+                href="#"
+                class="text-secondary"
+                style="text-decoration: none"
+              >
+                Brand Assets</a
+              >
+            </li>
+            <li class="text-center mt-3">
+              <a
+                href="#"
+                class="text-secondary"
+                style="text-decoration: none"
+              >
+                Investor Relations</a
+              >
+            </li>
+            <li class="text-center mt-3">
+              <a
+                href="#"
+                class="text-secondary"
+                style="text-decoration: none"
+              >
+                Terms of Service</a
+              >
+            </li>
+          </ul>
+        </div>
+        <!-- 3 column end -->
+        <!-- 4 column start -->
+
+        <div class="col-md-2 mx-auto mt-3">
+          <ul class="list-unstyled">
+            <h5 class="mb-4 text-center">Top Products</h5>
+
+            <li class="text-center mt-3">
+              <a
+                href="#"
+                class="text-secondary"
+                style="text-decoration: none"
+              >
+                Managed Website</a
+              >
+            </li>
+            <li class="text-center mt-3">
+              <a
+                href="#"
+                class="text-secondary"
+                style="text-decoration: none"
+              >
+                Managed Reputation</a
+              >
+            </li>
+            <li class="text-center mt-3">
+              <a
+                href="#"
+                class="text-secondary"
+                style="text-decoration: none"
+              >
+                Powe Tools</a
+              >
+            </li>
+            <li class="text-center mt-3">
+              <a
+                href="#"
+                class="text-secondary"
+                style="text-decoration: none"
+              >
+                Marketing Service</a
+              >
+            </li>
+          </ul>
+        </div>
+        <!-- 4 column end -->
+        <!-- 5 column start -->
+        <div class="col-md-4 pt-3">
+          <h5 class="mb-4 text-center">Newsletter</h5>
+          <p class="text-secondary text-center">
+            You can trust us. we only send promo offers,
+          </p>
+          <form action="">
+            <div class="input-group mt-4 pe-5 ps-5">
+              <input
+                type="email"
+                class="form-control"
+                placeholder="Your Email Address"
+              />
+              <button class="btn btn-warning">SUBSCRIBE</button>
+            </div>
+            <button type="submit" class="btn btn-info text-muted ms-5">
+              Submitting....
+            </button>
+          </form>
+        </div>
+        <!-- 5 column end -->
+      </div>
+      <!-- 1 row end -->
+      <!-- 2 row start -->
+
+      <div class="row align-items-center mt-3">
+        <!-- 1 column start -->
+        <div class="col-md-5">
+          <p>
+            Copyright © 2024 All rights reserved | This template is made with
+            b
+            <a class="text-warning" href="#" style="text-decoration: none"
+              >Colorlib</a
+            >Distributed by
+            <a class="text-warning" href="#" style="text-decoration: none"
+              >Themewagon</a
+            >
+          </p>
+        </div>
+        <!-- 1 column end -->
+        <!-- 2 column start -->
+
+        <div class="col-md-5 ms-5">
+          <div class="text-center">
+            <ul class="list-untyled list-inline">
+              <li class="list-inline-item">
+                <a
+                  href="#"
+                  class="btn-floating btn-sm text-white"
+                  style="font-size: 25px"
+                  ><i class="fab fa-facebook"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="btn-sm text-white" style="font-size: 25px"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="#"
+                  class="btn-floating btn-sm text-white"
+                  style="font-size: 25px"
+                  ><i class="fab fa-google"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" class="btn-sm text-white" style="font-size: 25px"
+                  ><i class="fab fa-linkedin"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- 2 column end -->
+      </div>
+      <!-- 2 row end  -->
+    </div>
+  </footer>
+  <!-- ---------------------------------------------------footer end------------------------------- -->
 
 
 
